--- a/index.html
+++ b/index.html
@@ -123,10 +123,8 @@ table, .body h2 { border-bottom: 1px solid #666; }
 <li>
 <p><a href="Topic-13-Hypothesis-Testing-Mean-Proportion.html">Topic 13: Hypothesis Testing for a Mean or a Proportion</a></p>
 </li>
-<li>
-<p><a href="Topic-14-Confidence-Intervals-Median.html">(<strong>optional</strong>) Topic 14: Hypothesis Testing for a Median</a></p>
-</li>
 </ul>
+<!-- - [(**optional**) Topic 14: Hypothesis Testing for a Median](Topic-14-Confidence-Intervals-Median.html) -->
 </div>
 <div class="include-after">
 </div>
