--- a/Topic-11-Confidence-Intervals-Proportion.html
+++ b/Topic-11-Confidence-Intervals-Proportion.html
@@ -240,7 +240,6 @@ code {
 
 .row {
   display: flex;
-  justify-content: top;
   align-items: flex-start;
 }
 
@@ -304,6 +303,10 @@ thead:empty {
   display: none;
 }
 
+table thead th {
+  padding: 0 0.25em;
+}
+
 .remark::before {
   content: "Remark:";
   color: #Feec01;
@@ -354,24 +357,6 @@ iframe[src^="https://www.myopenmath.com"] {
   transform-origin: 0 0;
 }
 
-/* span {
-  text-align: center;
-  font-size: 0.7em;
-  bottom: 0;
-  position: absolute;
-  color: #6296ff;
-} */
-
-/* .slide:has(iframe[src^="https://www.myopenmath.com"]) {
-  display: flex;
-  flex-direction: column;
-
-}
-
-.slide iframe[src^="https://www.myopenmath.com"] {
-  flex: 1;
-} */
-
 .small{
   font-size: 60%;
 }
@@ -384,15 +369,39 @@ iframe[src^="https://www.myopenmath.com"] {
   /* background-color: #ffeec4; */
 }
 
-/* .MathJax {
-  font-size: 0.9em;
-} */
-
 mjx-container[jax="SVG"][display="true"]{
-  margin: 0.6em 0 !important;
+  margin: 0.5em 0 !important;
+}
+
+.theorem::before {
+  content: "Theorem:";
+  color: #120fdf;
+  font-weight: bold;
+  font-size: 120%;
+}
+
+.theorem {
+  border: 0.1em solid rgb(65, 170, 223);
+  padding-left: 0.5em;
 }
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/css/key-buttons.min.css,npm/@xiee/utils/css/heading-anchor.min.css">
+<script>
+$(document).ready(function(){
+    if (typeof $('[data-toggle="tooltip"]').tooltip === 'function') {
+        $('[data-toggle="tooltip"]').tooltip();
+    }
+    if ($('[data-toggle="popover"]').popover === 'function') {
+        $('[data-toggle="popover"]').popover();
+    }
+});
+</script>
+<link href="C:\Users\Fei\AppData\Local\R\win-library\4.3\kableExtra\lightable-0.0.1\lightable.css" rel="stylesheet" />
+<script type="application/json" class="js-hypothesis-config">
+  {
+    "openSidebar": false
+  }
+</script>
 </head>
 <body>
 <div class="include-before">
@@ -403,7 +412,7 @@ mjx-container[jax="SVG"][display="true"]{
 <div class="date"><h3>September 2023</h3></div>
 </div>
 <div class="body">
-<h2 id="learning-goals-for-confidence-intervals"><span class="section-number">0.1</span> Learning Goals for Confidence Intervals</h2>
+<h2 id="learning-goals-for-confidence-intervals"><span class="section-number">1.</span> Learning Goals for Confidence Intervals</h2>
 <ul>
 <li>
 <p>Construct and interpret a confidence intervals for one population proportion.</p>
@@ -421,21 +430,21 @@ mjx-container[jax="SVG"][display="true"]{
 </li>
 </ul>
 <hr />
-<h2 id="confidence-interval-for-a-proportion-1-of-2"><span class="section-number">0.2</span> Confidence Interval for a Proportion (1 of 2)</h2>
+<h2 id="confidence-interval-for-a-proportion-1-of-2"><span class="section-number">2.</span> Confidence Interval for a Proportion (1 of 2)</h2>
 <ul>
 <li>
 <p>Recall that the standard error of sample proportions is \(\sigma_{\hat{P}}=\sqrt{\frac{p(1-p)}{n}}\), where \(n\) is the sample size and \(p\) is the population proportion. As a consequence, when estimating the population proportion \(p\), we only have a point estimate \(\hat{p}\) (phat) to use. For the standard error, we use the estimation
-$$\sigma_{\hat{p}}\approx\hat{\sigma}_{\hat{p}}=\sqrt{\dfrac{\hat{p}(1-\hat{p})}{n}}.$$</p>
+$$\textstyle \sigma_{\hat{p}}\approx\hat{\sigma}_{\hat{p}}=\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}.$$</p>
 </li>
 <li>
 <p>Based on the central limit theorem, when \(n\) is large enough, at the \(100(1-\alpha)\%\) level, the margin of error for \(p\) is defined as
-$$E=z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$$
+$$\textstyle E=z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}$$
 In Excel, \(z_{\alpha/2}\)=<code>NORM.S.INV((1 + confidence level)/2)</code>. The marginal error can also be obtained by
 <code>CONFIDENCE.NORM(1-confidence level, SQRT(phat*(1-phat)/n, n)</code>.</p>
 </li>
 </ul>
 <hr />
-<h2 id="confidence-interval-for-a-proportion-2-of-2"><span class="section-number">0.3</span> Confidence Interval for a Proportion (2 of 2)</h2>
+<h2 id="confidence-interval-for-a-proportion-2-of-2"><span class="section-number">3.</span> Confidence Interval for a Proportion (2 of 2)</h2>
 <ul>
 <li>
 <p>The confidence interval for \(p\) is defined by
@@ -452,11 +461,15 @@ Indeed, if the sample proportion is 0 or 1, the confidence interval defined here
 </li>
 </ul>
 <hr />
-<h2 id="distribution-of-confidence-interval"><span class="section-number">0.4</span> Distribution of Confidence Interval</h2>
-<p>By the central limit theorem, the random variable \(\hat{p}\) is normally distributed. The chance that \(p\in \left[\hat{p}-z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}, \hat{p}+z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}\right]\) is the same as the chance that \(\hat{p}\in \left[p-z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}, p+z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}\right]\). That shows \(z_{\alpha/2}\) satisfying
-$$P(-z_{\alpha/2}&lt;\dfrac{\hat{p}-p}{\sqrt{\frac{p(1-p)}{n}}&lt;z_{\alpha/2})=1-\alpha.$$</p>
+<h2 id="distribution-of-confidence-interval"><span class="section-number">4.</span> Distribution of Confidence Interval</h2>
+<p>By the central limit theorem, the random variable \(\hat{p}\) is normally distributed. The chance that
+$$p\in \left[\hat{p}-z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}, \hat{p}+z_{\alpha/2}\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}\right]$$
+is the same as the chance that
+$$\hat{p}\in \left[p-z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}, p+z_{\alpha/2}\sqrt{\frac{p(1-p)}{n}}\right].$$</p>
+<p>It follows that \(z_{\alpha/2}\) satisfies the following equation
+$$P(-z_{\alpha/2}&lt;\dfrac{\hat{p}-p}{\sqrt{\frac{p(1-p)}{n}}}&lt;z_{\alpha/2})=1-\alpha.$$</p>
 <hr />
-<h2 id="example-estimating-the-proportion-of-students-taking-busses-1-of-2"><span class="section-number">0.5</span> Example: Estimating the Proportion of Students Taking Busses (1 of 2)</h2>
+<h2 id="example-proportion-of-students-taking-busses-1-of-2"><span class="section-number">5.</span> Example: Proportion of Students Taking Busses (1 of 2)</h2>
 <p>In a random sample of 100 students in college, 65 said that they come to college by bus.</p>
 <ol>
 <li>
@@ -470,10 +483,10 @@ $$P(-z_{\alpha/2}&lt;\dfrac{\hat{p}-p}{\sqrt{\frac{p(1-p)}{n}}&lt;z_{\alpha/2})=
 <p>As \(n\hat{p}=100\cdot 0.65=65&gt;10\) and \(n(1-\hat{p})=100\cdot 0.35=35&gt;10\), which implies the sample is large enough, approximately the standard error is
 $$\hat{\sigma}_{\hat{P}}=\sqrt{\frac{\hat{p}(1-\hat{p})}{n}}=\sqrt{\frac{0.65(1-0.65)}{100}}\approx0.048.$$</p>
 <hr />
-<h2 id="example-estimating-the-proportion-of-students-taking-busses-2-of-2"><span class="section-number">0.6</span> Example: Estimating the Proportion of Students Taking Busses (2 of 2)</h2>
+<h2 id="example-proportion-of-students-taking-busses-2-of-2"><span class="section-number">6.</span> Example: Proportion of Students Taking Busses (2 of 2)</h2>
 <p>At 99% level of confidence, the value \(1-\alpha/2=(1+\text{confidence level})/2=(1+0.99)/2=0.995\). The critical value \(z_{\alpha/2}\) is determined by the equation \(P(Z&lt;z_{\alpha/2})=0.9955\). Using the Excel function <code>NORM.S.INV(0.995)</code>, we find the critical value \(z_{\alpha/2}\approx 2.576\).</p>
 <p>Thus the marginal error is
-$$E=z_{\alpha/2}\cdot \hat{\sigma}_{\hat{P}}=2.576\cdot 0.048=0.123,$$
+\(E=z_{\alpha/2}\cdot \hat{\sigma}_{\hat{P}}=2.576\cdot 0.048=0.123,\)
 and the confidence interval at 99% level is
 $$[\hat{p}-E, \hat{p}+E]\approx [0.65-0.123, 0.65+0.123]=[0.527, 0.773].$$</p>
 <p>Conclusion: we are 99% confident that the proportion of all students at the college who take bus is in the interval \([0.527, 0.773]\).</p>
@@ -482,7 +495,7 @@ $$[\hat{p}-E, \hat{p}+E]\approx [0.65-0.123, 0.65+0.123]=[0.527, 0.773].$$</p>
 <code>CONFIDENCE.NORM(1-0.99, SQRT(65/100*(1-65/100)/100), 100)</code>.</p>
 </div>
 <hr />
-<h2 id="factors-affect-the-width-of-confidence-intervals"><span class="section-number">0.7</span> Factors Affect the Width of Confidence Intervals</h2>
+<h2 id="factors-affect-the-width-of-confidence-intervals"><span class="section-number">7.</span> Factors Affect the Width of Confidence Intervals</h2>
 <ul>
 <li>
 <p>The width of a confidence interval, equals twice the standard error, gives a measure of precision of the estimation.</p>
@@ -507,7 +520,7 @@ $$\text{Marginal Error} = \text{Critical Value}\cdot \frac{\text{(estimated) Pop
 </li>
 </ul>
 <hr />
-<h2 id="sample-size-determination"><span class="section-number">0.8</span> Sample Size Determination</h2>
+<h2 id="sample-size-determination"><span class="section-number">8.</span> Sample Size Determination</h2>
 <ul>
 <li>
 <p>In practice, we may desire a marginal error of \(E\). With a fixed confidence level \(100(1-\alpha)\%\), the larger the sample size the smaller the marginal error.</p>
@@ -522,16 +535,15 @@ $$n=\left(\dfrac{z_{\alpha/2}\cdot \sigma}{{E}}\right)^2.$$</p>
 </li>
 </ul>
 <hr />
-<h2 id="example-minimum-sample-size-error-in-proportion"><span class="section-number">0.9</span> Example: Minimum Sample Size - Error in Proportion</h2>
+<h2 id="example-minimum-sample-size-error-in-proportion"><span class="section-number">9.</span> Example: Minimum Sample Size - Error in Proportion</h2>
 <p>Suppose you want to estimate the proportion of students at QCC who live in Queens. By surveying your classmates, you find around 70% live in Queens. Use this as a guess to determine how many students would need to be included in a random sample if you wanted the error of margin for a 95% confidence interval to be less than or equal to 2%.</p>
 <p><strong>Solution:</strong> We may use \(\hat{p}=0.7\) as a reasonable guess for the population proportion.</p>
 <p>At the 95% level, the critical value is \(z_{\alpha/2}=\) <code>NORM.S.INV((1+0.95)/2)</code> \(\approx 1.96\).</p>
-<p>The marginal error is \(E=0.02\).</p>
-<p>Then the appropriate minimal sample size is determined by
+<p>Since the marginal error is \(E=0.02\), the appropriate minimal sample size is determined by
 $$n=\left(\frac{z_{\alpha/2}}{{E}}\right)^2\cdot \hat{p}(1-\hat{p})=(1.96/0.02)^2\cdot 0.7\cdot(1-0.7)=2016.84.$$</p>
 <p>Since the sample size has to be an integer, to get a error no more than 2% at the level 95%,  the minimal sample size should be at least 2017.</p>
 <hr />
-<h2 id="example-minimum-sample-size-error-in-mean"><span class="section-number">0.10</span> Example: Minimum Sample Size - Error in Mean</h2>
+<h2 id="example-minimum-sample-size-error-in-mean"><span class="section-number">10.</span> Example: Minimum Sample Size - Error in Mean</h2>
 <p>Find the minimum sample size necessary to construct a 99% confidence interval for the population mean with a margin of error \(E =0.2\). Assume that the estimated population standard deviation is \(\sigma=1.3\).</p>
 <p><strong>Solution:</strong> At the 99% level, the critical value \(z_{\alpha/2}=\) <code>NORM.S.INV((1+0.99)/2)</code> \(\approx 2.576\).</p>
 <p>The desired marginal error is \({E}=0.2\).</p>
@@ -540,12 +552,12 @@ $$n=\left(\frac{z_{\alpha/2}}{{E}}\right)^2\cdot \hat{p}(1-\hat{p})=(1.96/0.02)^
 $$n=\left(\dfrac{z_{\alpha/2}\cdot \sigma}{{E}}\right)^2\approx (2.576\cdot 1.3/0.2)^2 \approx 280.4.$$</p>
 <p>To get a error no more than 0.2 at the level 95%,  the minimal sample size should be at least 281.</p>
 <hr />
-<h2 id="practice-confidence-interval-of-proportion-of-kids"><span class="section-number">0.11</span> Practice: Confidence Interval of Proportion of Kids</h2>
+<h2 id="practice-confidence-interval-of-proportion-of-kids" class="unnumbered">Practice: Confidence Interval of Proportion of Kids</h2>
 <div class="iframecontainer">
 <iframe src="https://www.myopenmath.com/embedq2.php?id=7347&amp;seed=2020&amp;showansafter" width="100%" height="560px" data-external="1"></iframe>
 </div>
 <hr />
-<h2 id="practice-confidence-intervals-for-product-quality"><span class="section-number">0.12</span> Practice: Confidence Intervals for Product Quality</h2>
+<h2 id="practice-confidence-intervals-for-product-quality" class="unnumbered">Practice: Confidence Intervals for Product Quality</h2>
 <p>To understand the reason for returned goods, the manager of a store examines the records on 40 products that were returned in the last year. Reasons were coded by 1 for “defective,” 2 for “unsatisfactory,” and 0 for all other reasons, with the results shown in the table.</p>
 <div class="center">
 <table class="table" style="margin-left: auto; margin-right: auto;">
@@ -606,25 +618,27 @@ $$n=\left(\dfrac{z_{\alpha/2}\cdot \sigma}{{E}}\right)^2\approx (2.576\cdot 1.3/
 </li>
 </ol>
 <hr />
-<h2 id="practice-sample-size-for-mean-with-given-error"><span class="section-number">0.13</span> Practice: Sample Size for Mean with Given Error</h2>
+<h2 id="practice-sample-size-for-mean-with-given-error" class="unnumbered">Practice: Sample Size for Mean with Given Error</h2>
 <div class="iframecontainer">
 <iframe src="https://www.myopenmath.com/embedq2.php?id=19799&amp;seed=2020&amp;showansafter" width="100%" height="560px" data-external="1"></iframe>
 </div>
 <hr />
-<h2 id="practice-sample-size-for-proportion-with-given-error"><span class="section-number">0.14</span> Practice: Sample Size for Proportion with Given Error</h2>
+<h2 id="practice-sample-size-for-proportion-with-given-error" class="unnumbered">Practice: Sample Size for Proportion with Given Error</h2>
 <div class="iframecontainer">
 <iframe src="https://www.myopenmath.com/embedq2.php?id=7348&amp;seed=2020&amp;showansafter" width="100%" height="560px" data-external="1"></iframe>
 </div>
 <hr />
-<h2 id="practice-confidence-interval-of-proportion-given-table"><span class="section-number">0.15</span> Practice: Confidence Interval of Proportion Given Table</h2>
+<h2 id="practice-confidence-interval-of-proportion-given-table" class="unnumbered">Practice: Confidence Interval of Proportion Given Table</h2>
 <div class="iframecontainer">
 <iframe src="https://www.myopenmath.com/embedq2.php?id=213816&amp;seed=2020&amp;showansafter" width="100%" height="560px" data-external="1"></iframe>
 </div>
 <hr />
-<!-- # class = "center middle" -->
-<h1 id="lab-instructions-in-excel" class="unnumbered">Lab Instructions in Excel</h1>
+<!--# class="center middle" -->
+<div class="part">
+<p>Lab Instructions in Excel</p>
+</div>
 <hr />
-<h2 id="excel-functions-for-normal-distributions-and-marginal-errors"><span class="section-number">0.1</span> Excel Functions for Normal Distributions and Marginal Errors</h2>
+<h2 id="normal-distributions-and-marginal-errors"><span class="section-number">11.</span> Normal Distributions and Marginal Errors</h2>
 <ul>
 <li>
 <p>When a cumulative probability \(p=P(Z&lt;z)\) of a standard normal random variable \(Z\) is given, we can find \(z\) using <code>NORM.S.INV(p)</code>.</p>
@@ -635,7 +649,7 @@ $$n=\left(\dfrac{z_{\alpha/2}\cdot \sigma}{{E}}\right)^2\approx (2.576\cdot 1.3/
 </li>
 </ul>
 <hr />
-<h2 id="lab-practice-confidence-interval-for-proportion"><span class="section-number">0.2</span> Lab Practice: Confidence Interval for Proportion</h2>
+<h2 id="lab-practice-confidence-interval-for-proportion" class="unnumbered">Lab Practice: Confidence Interval for Proportion</h2>
 <p>Foothill College’s athletic department wants to calculate the proportion of students who have attended a women’s basketball game at the college. They use student email addresses, randomly choose 220 students, and email them. Of the 145 who responded, 22 had attended a women’s basketball game.</p>
 <p>Calculate and interpret the approximate 90% confidence interval for the proportion of all Foothill College students who have attended a women’s basketball game.</p>
 </div>
@@ -785,6 +799,7 @@ $$n=\left(\dfrac{z_{\alpha/2}\cdot \sigma}{{E}}\right)^2\approx (2.576\cdot 1.3/
   if (bc) d.body.className += ' ' + bc;
 })(document);
 </script>
+<script src="https://hypothes.is/embed.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" defer></script>
 <script src="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/js/key-buttons.min.js,npm/@xiee/utils/js/external-link.min.js,npm/@xiee/utils/js/heading-anchor.min.js" defer></script>
 <script>
