--- a/Topic-5-Probability.html
+++ b/Topic-5-Probability.html
@@ -300,6 +300,14 @@ table{
 border-collapse: collapse;
 }
 
+thead:empty {
+  display: none;
+}
+
+table thead th {
+  padding: 0 0.25em;
+}
+
 .remark::before {
   content: "Remark:";
   color: #Feec01;
@@ -389,6 +397,11 @@ mjx-container[jax="SVG"][display="true"]{
 }
 </style>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/css/key-buttons.min.css,npm/@xiee/utils/css/ heading-anchor.min.css">
+<script type="application/json" class="js-hypothesis-config">
+  {
+    "openSidebar": false
+  }
+</script>
 </head>
 <body>
 <div class="include-before">
@@ -1040,6 +1053,7 @@ $$</p>
   if (bc) d.body.className += ' ' + bc;
 })(document);
 </script>
+<script src="https://hypothes.is/embed.js" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js" defer></script>
 <script src="https://cdn.jsdelivr.net/combine/npm/@xiee/utils/js/key-buttons.min.js,npm/@xiee/utils/js/ external-link.min.js,npm/@xiee/utils/js/ heading-anchor.min.js" defer></script>
 <script>
