fixed diplay errors

--- a/Topic-2-Graphical-Descriptions.html
+++ b/Topic-2-Graphical-Descriptions.html
@@ -642,7 +642,7 @@ $$\text{area of bar} = \text{relative frequency} = \text{height of bar (density)
 </div>
 <hr />
 <h2 id="practice-histogram" class="unnumbered">Practice: Histogram</h2>
-<p>:::{.iframecontainer}</p>
+<div class="iframecontainer">
 <iframe src="https://www.myopenmath.com/embedq2.php?id=1085868&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
 </div>
 <hr />
@@ -700,7 +700,7 @@ $$\text{area of bar} = \text{relative frequency} = \text{height of bar (density)
 </div>
 <hr />
 <h2 id="practice-shapes-of-distributions_2" class="unnumbered">Practice: Shapes of Distributions</h2>
-<p>:::{.iframecontainer}</p>
+<div class="iframecontainer">
 <iframe src="https://www.myopenmath.com/embedq2.php?id=6992&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
 </div>
 <hr />
@@ -885,7 +885,7 @@ $$\text{area of bar} = \text{relative frequency} = \text{height of bar (density)
 </table>
 <hr />
 <h2 id="practice-pie-chart" class="unnumbered">Practice: Pie Chart</h2>
-<p>:::{.iframecontainer}</p>
+<div class="iframecontainer">
 <iframe src="https://www.myopenmath.com/embedq2.php?id=278180&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
 </div>
 <hr />
