--- a/Topic-1-Statistical-Studies.html
+++ b/Topic-1-Statistical-Studies.html
@@ -597,9 +597,10 @@ mjx-container[jax="SVG"][display="true"]{
 <div class="footmark">
 <p>Source: <a href="https://www.khanacademy.org/math/probability/study-design-a1/observational-studies-experiments/a/observational-studies-and-experiments">Khan Academy</a></p>
 </div>
+<hr />
 <h2 id="practice-observational-vs-experimental-ii" class="unnumbered">Practice: Observational vs Experimental II</h2>
 <div class="iframecontainer">
-<iframe src="https://www.myopenmath.com/embedq2.php?id=277257&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
+<iframe src="https://www.myopenmath.com/embedq.php?id=277257&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
 </div>
 <hr />
 <h2 id="questions-about-population-1-of-2"><span class="section-number">9.</span> Questions about Population (1 of 2)</h2>
@@ -690,7 +691,7 @@ Determine whether the study supports the conclusion that taking aspirin lowers t
 <hr />
 <h2 id="practice-correlation-or-causation" class="unnumbered">Practice: Correlation or Causation</h2>
 <div class="iframecontainer">
-<iframe src="https://www.myopenmath.com/embedq2.php?id=307471&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
+<iframe src="https://www.myopenmath.com/embedq.php?id=307471&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
 </div>
 <hr />
 <h2 id="sampling-plans"><span class="section-number">14.</span> Sampling Plans</h2>
@@ -787,7 +788,7 @@ Example: random survey math students to estimate the average GPA or a college.</
 <hr />
 <h2 id="practice-sampling-techniques" class="unnumbered">Practice: Sampling Techniques</h2>
 <p>Click the link to open the practice in a new window.</p>
-<p><a href="https://www.myopenmath.com/embedq2.php?id=178722&amp;seed=2024&amp;showansafter">Practice on Sampling Techniques</a></p>
+<p><a href="https://www.myopenmath.com/embedq.php?id=178722&amp;seed=2024&amp;showansafter">Practice on Sampling Techniques</a></p>
 <hr />
 <h2 id="elements-of-experimental-design-1-of-2"><span class="section-number">19.</span> Elements of Experimental Design (1 of 2)</h2>
 <ul>
@@ -846,7 +847,7 @@ Example: random survey math students to estimate the average GPA or a college.</
 <hr />
 <h2 id="practice-principles-of-experimental-design" class="unnumbered">Practice: Principles of Experimental Design</h2>
 <div class="iframecontainer">
-<iframe src="https://www.myopenmath.com/embedq2.php?id=438624&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
+<iframe src="https://www.myopenmath.com/embedq.php?id=438624&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
 </div>
 <hr />
 <h2 id="practice-experimental-design" class="unnumbered">Practice: Experimental Design</h2>
@@ -859,7 +860,7 @@ Example: random survey math students to estimate the average GPA or a college.</
 <hr />
 <h2 id="practice-confounding-variable-definition" class="unnumbered">Practice: Confounding Variable Definition</h2>
 <div class="iframecontainer">
-<iframe src="https://www.myopenmath.com/embedq2.php?id=384958&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
+<iframe src="https://www.myopenmath.com/embedq.php?id=384958&amp;seed=2024&amp;showansafter" width="100%" height="500px" data-external="1"></iframe>
 </div>
 <hr />
 <!--# class="middle center"-->
