Update titles in Rmd and HTML files

--- a/Topic-4-Linear-Relationship.html
+++ b/Topic-4-Linear-Relationship.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Linear Relationship</title>
+<title>Topic 4: Linear Relationship</title>
 <style type="text/css">
 body {
   font-family: sans-serif;
@@ -405,7 +405,7 @@ $(document).ready(function(){
 </head>
 <body>
 <div class="frontmatter">
-<div class="title"><h1>Linear Relationship</h1></div>
+<div class="title"><h1>Topic 4: Linear Relationship</h1></div>
 <div class="author"><h2>Fei Ye</h2></div>
 <div class="date"><h3>January 2024</h3></div>
 </div>
@@ -572,7 +572,7 @@ where \(n\) is the sample size, \(x\) is a data value for the explanatory variab
 <p>The correlation coefficient \(r\) is between \(-1\) and \(1\).</p>
 </li>
 <li>
-<p>The closer the absolute value \(|r|\) is to \(1\), the stronger the linear relationship is. Conventionally, the relationship is strong if \(|r| &gt; 0.8\), morderate if \(0.5&lt; |r|\le 0.8\), and weak if \(|r|\le 0.5\).</p>
+<p>The closer the absolute value \(|r|\) is to \(1\), the stronger the linear relationship is. Conventionally, the relationship is strong if \(|r| &gt; 0.8\), moderate if \(0.5&lt; |r|\le 0.8\), and weak if \(|r|\le 0.5\).</p>
 </li>
 <li>
 <p>The correlation is symmetric in \(x\) and \(y\), that is <code>CORREL(x, y)=CORREL(y, x)</code>.</p>
@@ -913,7 +913,7 @@ where the slope is \(m=\frac{\sum(x-\bar{x})(y-\bar{y})}{\sum(x-\bar{x})^2}=r\fr
 <p>The \(y\)-intercept \((0,b)\) can be obtained using the Excel function <code>INTERCEPT()</code>. In this example, \(b=  33.68\).</p>
 <p>An equation of the line is then \(\hat{y}=10.836x + 33.68\).</p>
 <p>When \(x=1.8\), we have \(\hat{y}=10.836*1.8 + 33.68= 53.1848\).</p>
-<p>The residual is \(y-\hat{y}=51-53.1848= -2.1848\). That means the predication over-estimates the eruption time about -2.18 minutes.</p>
+<p>The residual is \(y-\hat{y}=51-53.1848= -2.1848\). That means the predication over-estimates the waiting time about 2.18 minutes.</p>
 <hr />
 <h2 id="practice-find-regression-line" class="unnumbered">Practice: Find Regression Line</h2>
 <div class="iframecontainer">
