--- a/Topic-5-Probability.html
+++ b/Topic-5-Probability.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-<title>Basic Concepts of Probability</title>
+<title>Topic 5: Basic Concepts of Probability</title>
 <style type="text/css">
 body {
   font-family: sans-serif;
@@ -394,7 +394,7 @@ mjx-container[jax="SVG"][display="true"]{
 </head>
 <body>
 <div class="frontmatter">
-<div class="title"><h1>Basic Concepts of Probability</h1></div>
+<div class="title"><h1>Topic 5: Basic Concepts of Probability</h1></div>
 <div class="author"><h2>Fei Ye</h2></div>
 <div class="date"><h3>January 2024</h3></div>
 </div>
