updated slides on distributions

--- a/Topic-4-Linear-Relationship.html
+++ b/Topic-4-Linear-Relationship.html
@@ -987,7 +987,7 @@ where \(SS_{res}=\sum (y-\hat{y})^2\) is the <strong>sum of square residuals</st
 <div style="63%;">
 <p>Find the standard error and coefficient of determination for the data of midterm1 and final.</p>
 <p><strong>Solution:</strong></p>
-<p>In Excel, the function <code>STEXY()</code> can be used to obtain the residual standard error. In this example, \(s_e\approx 2.748\).</p>
+<p>In Excel, the function <code>STEYX()</code> can be used to obtain the residual standard error. In this example, \(s_e\approx 2.748\).</p>
 <p>The correlation coefficient is \(0.905\).</p>
 <p>The coefficient determination is \(r^2=0.905^2\approx 0.819\).</p>
 </div>
