--- a/Topic-9-Sampling-Distributions.html
+++ b/Topic-9-Sampling-Distributions.html
@@ -655,10 +655,7 @@ which can be obtained by
 <p>Suppose that in 36% of all car accidents involve injury. Find the probability that the injury rate in a random sample of 250 car accidents is between 30% and 45%.</p>
 <p><strong>Solution:</strong> The injury rate of all car accidents is \(p=36\%=0.36\) and the sample size is \(250\). Because \(np=250\cdot 0.36=90&gt;10\) and \(n(1-p)=250-90=160&gt;10\), the sample size is considered large enough. By the Central Limit Theorem, the sample proportion \(\hat{P}\) is approximately normally distributed with the mean \(\mu_{\hat{P}}=p=0.36\) and standard deviation \(\sigma_{\hat{P}}=\sqrt{\frac{p(1-p)}{n}}\approx 0.03\)</p>
 <p>Then the probability of a random sample of 250 car accidents with the injury rate between 30% and 45% is
-\(\textstyle P(0.30&lt;\hat{P}&lt;0.45)=P(\hat{P}&lt;0.45)-P(\hat{P}&lt;0.30)=\) <code>=NORM.DIST(30%, 36%,0.03)-NORM.DIST(45%, 36%,0.03)</code> \(\approx  0.976\)</p>
-<hr />
-<h2 id="practice-sample-mean-within-an-interval" class="unnumbered">Practice: Sample Mean within an Interval</h2>
-<p>An unknown distribution has a mean of 28 and a standard deviation 6. Samples of size n = 30 are drawn randomly from the population. Find the probability that the sample mean is between 27 and 30.</p>
+\(\textstyle P(0.30&lt;\hat{P}&lt;0.45)=P(\hat{P}&lt;0.45)-P(\hat{P}&lt;0.30)=\) <code>=NORM.DIST(30%, 36%,0.03, TRUE)-NORM.DIST(45%, 36%,0.03, TRUE)</code> \(\approx  0.976\)</p>
 <hr />
 <h2 id="practice-sample-mean-of-gpa" class="unnumbered">Practice: Sample Mean of GPA</h2>
 <p>The numerical population of grade point averages at a college has mean 2.61 and standard deviation 0.5. If a random sample of size 100 is taken from the population, what is the probability that the sample mean will be between 2.51 and 2.71?</p>
@@ -671,8 +668,10 @@ which can be obtained by
 <iframe src="https://www.myopenmath.com/embedq2.php?id=178683&amp;seed=2020&amp;showansafter" width="100%" height="560px" data-external="1"></iframe>
 </div>
 <hr />
-<h2 id="practice-proportion-of-voting" class="unnumbered">Practice: Proportion of Voting</h2>
-<p>In a mayoral election, based on a poll, a newspaper reported that the current mayor received 45% of the vote. If this is true, what is the probability that a random sample of 100 voters had less than 35% voting for the current mayor?</p>
+<h2 id="practice-minimal-mean-weight-of-a-particular-fruit" class="unnumbered">Practice: Minimal Mean Weight of a Particular Fruit</h2>
+<div class="iframecontainer">
+<iframe src="https://www.myopenmath.com/embedq2.php?id=33379&amp;seed=2020&amp;showansafter" width="100%" height="560px" data-external="1"></iframe>
+</div>
 <hr />
 <!--# class="center middle" -->
 <div class="part">
@@ -712,10 +711,8 @@ which can be obtained by
 <p>Source: <a href="https://saylordotorg.github.io/text_introductory-statistics/s10-03-the-sample-proportion.html">Exercise 13 in Section 6.3 in Introductory Statistics</a>.</p>
 </div>
 <hr />
-<h2 id="practice-minimal-mean-weight-of-a-particular-fruit" class="unnumbered">Practice: Minimal Mean Weight of a Particular Fruit</h2>
-<div class="iframecontainer">
-<iframe src="https://www.myopenmath.com/embedq2.php?id=33379&amp;seed=2020&amp;showansafter" width="100%" height="560px" data-external="1"></iframe>
-</div>
+<h2 id="practice-proportion-of-voting" class="unnumbered">Practice: Proportion of Voting</h2>
+<p>In a mayoral election, based on a poll, a newspaper reported that the current mayor received 45% of the vote. If this is true, what is the probability that a random sample of 100 voters had less than 35% voting for the current mayor?</p>
 <hr />
 <!--# class="center middle" -->
 <div class="part">
