--- a/Topic-9-Sampling-Distributions.html
+++ b/Topic-9-Sampling-Distributions.html
@@ -465,19 +465,19 @@ $$\text{Population Parameter}=\text{Sample Statistic}+\text{Chance Error}.$$</p>
 <div class="remark">
 <p>In terms of standardization, the central limit theorem says that the random variable \(\bar{Z}=\dfrac{\bar{x}-\mu}{\sigma/\sqrt{n}}\) has an approximately standard normal distribution.</p>
 </div>
+<!-- --- -->
+<!-- ## Visualization: Central Limit Theorem for Mean -->
+<!-- ::: {.iframecontainer} -->
+<!-- <iframe src="https://seeing-theory.brown.edu/probability-distributions/index.html#section3" width="100%" height="550px" data-external="1"></iframe> -->
+<!-- ::: -->
+<!-- ::: {.footmark} -->
+<!--   Source: [https://seeing-theory.brown.edu/probability-distributions/index.html#section3](https://seeing-theory.brown.edu/probability-distributions/index.html#section3) -->
+<!-- ::: -->
 <hr />
-<h2 id="visualization-central-limit-theorem-for-mean"><span class="section-number">7.</span> Visualization: Central Limit Theorem for Mean</h2>
-<div class="iframecontainer">
-<iframe src="https://seeing-theory.brown.edu/probability-distributions/index.html#section3" width="100%" height="550px" data-external="1"></iframe>
-</div>
-<div class="footmark">
-<p>Source: <a href="https://seeing-theory.brown.edu/probability-distributions/index.html#section3">https://seeing-theory.brown.edu/probability-distributions/index.html#section3</a></p>
-</div>
-<hr />
-<h2 id="but-what-is-the-central-limit-theorem"><span class="section-number">8.</span> But What is the Central Limit Theorem?</h2>
+<h2 id="but-what-is-the-central-limit-theorem"><span class="section-number">7.</span> But What is the Central Limit Theorem?</h2>
 <iframe width="550" height="315" src="https://www.youtube.com/embed/zeJD6dqJ5lo?si=zsbChFbzj-pm2w5f&amp;start=256" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 <hr />
-<h2 id="required-sample-size-for-mean"><span class="section-number">9.</span> Required Sample Size for Mean</h2>
+<h2 id="required-sample-size-for-mean"><span class="section-number">8.</span> Required Sample Size for Mean</h2>
 <ul>
 <li>
 <p>For most distributions (not highly skewed), when sample size \(n&gt;30\), the sampling distribution of the sample mean \(\bar{X}\) can be approximated reasonably well by a normal distribution. The larger the sample size, the better the approximation will be.</p>
@@ -493,7 +493,7 @@ $$\text{Population Parameter}=\text{Sample Statistic}+\text{Chance Error}.$$</p>
 <p>See <a href="https://stats.stackexchange.com/questions/3734">https://stats.stackexchange.com/questions/3734</a> for a discussion on intuitive explanation.</p>
 </div>
 <hr />
-<h2 id="example-sampling-distribution-of-small-data-1-of-2"><span class="section-number">10.</span> Example: Sampling Distribution of Small Data (1 of 2)</h2>
+<h2 id="example-sampling-distribution-of-small-data-1-of-2"><span class="section-number">9.</span> Example: Sampling Distribution of Small Data (1 of 2)</h2>
 <p>Randomly draw samples of size 2 with replacement from the numbers 1, 3, 4.</p>
 <ul>
 <li>List all possible samples and calculate the mean of each sample.</li>
@@ -558,7 +558,7 @@ $$\text{Population Parameter}=\text{Sample Statistic}+\text{Chance Error}.$$</p>
 </div>
 <p>It can be verified that \(\mu_{\bar{X}}=\mu\) and \(\sigma/\sqrt{n}=1.25/\sqrt{2}\approx 0.88=\sigma_{\bar{X}}\).</p>
 <hr />
-<h2 id="example-sampling-distribution-of-small-data-2-of-2"><span class="section-number">11.</span> Example: Sampling Distribution of Small Data(2 of 2)</h2>
+<h2 id="example-sampling-distribution-of-small-data-2-of-2"><span class="section-number">10.</span> Example: Sampling Distribution of Small Data(2 of 2)</h2>
 <p>The following are the distribution of the population and the distribution of sample means.</p>
 <div class="row">
 <div class="pull-left">
@@ -573,7 +573,7 @@ $$\text{Population Parameter}=\text{Sample Statistic}+\text{Chance Error}.$$</p>
 </div>
 </div>
 <hr />
-<h2 id="example-mean-length-of-time-on-hold"><span class="section-number">12.</span> Example: Mean Length of Time on Hold</h2>
+<h2 id="example-mean-length-of-time-on-hold"><span class="section-number">11.</span> Example: Mean Length of Time on Hold</h2>
 <!--# style="font-size:0.95em;"-->
 <p>Suppose the mean length of time that a caller is placed on hold when telephoning a customer service center is 23.8 seconds, with standard deviation 4.6 seconds. Find the probability that the mean length of time on hold in a random sample of 1,000 calls will be within 0.5 second of the population mean.</p>
 <p><strong>Solution:</strong> Since the sample size \(n=1000&gt;30\) is large enough, by the Central Limit Theorem, we know that the mean length of time is approximately normally distributed.</p>
@@ -584,7 +584,7 @@ $$\text{Population Parameter}=\text{Sample Statistic}+\text{Chance Error}.$$</p>
 <code>NORM.DIST(24.3, 23.8, 4.6/SQRT(1000),TRUE)-NORM.DIST(23.3, 23.8, 4.6/SQRT(1000),TRUE)</code></li>
 </ul>
 <hr />
-<h2 id="example-normal-vs-sampling-distribution"><span class="section-number">13.</span> Example: Normal vs Sampling Distribution</h2>
+<h2 id="example-normal-vs-sampling-distribution"><span class="section-number">12.</span> Example: Normal vs Sampling Distribution</h2>
 <!--# style="font-size:0.91em;"-->
 <p>Suppose speeds of vehicles on a particular stretch of roadway are normally distributed with mean 36.6 mph and standard deviation 1.7 mph.</p>
 <ul>
@@ -603,7 +603,7 @@ $$\text{Population Parameter}=\text{Sample Statistic}+\text{Chance Error}.$$</p>
 </li>
 </ul>
 <hr />
-<h2 id="sampling-distribution-of-a-sample-proportion"><span class="section-number">14.</span> Sampling Distribution of a Sample Proportion</h2>
+<h2 id="sampling-distribution-of-a-sample-proportion"><span class="section-number">13.</span> Sampling Distribution of a Sample Proportion</h2>
 <ul>
 <li>
 <p>The proportion of a specific characteristic in a data set can be viewed as the mean of the data set by identifying the specific characteristic with 1 and others with \(0\).</p>
@@ -619,13 +619,13 @@ $$\sigma=\sqrt{(1-p)^2p+(0-p)^2(1-p)}=\sqrt{p(1-p)}.$$</p>
 </li>
 </ul>
 <hr />
-<h2 id="central-limit-theorem-for-proportion"><span class="section-number">15.</span> Central Limit Theorem for Proportion</h2>
+<h2 id="central-limit-theorem-for-proportion"><span class="section-number">14.</span> Central Limit Theorem for Proportion</h2>
 <p>For a sampling distribution of sample proportion, we write \(\hat{P}\) for the random variable of sample proportions.</p>
 <div class="theorem" title="Central Limit Theorem for Proportion">
 <p>For large samples, the distribution of sample proportions \(\hat{P}\) is approximately normal, with the mean \(\mu_{\hat{P}}=p\) and standard deviation \(\sigma_{\hat{P}}=\sqrt{\frac{p(1-p)}{n}}\), where \(p\) is the population proportion.</p>
 </div>
 <hr />
-<h2 id="required-sample-size-for-proportion"><span class="section-number">16.</span> Required Sample Size for Proportion</h2>
+<h2 id="required-sample-size-for-proportion"><span class="section-number">15.</span> Required Sample Size for Proportion</h2>
 <ul>
 <li>
 <p>As a sample proportion is always between 0 and 1, and 99.7% of sample proportions lie within 3 standard deviation away from the population proportion, when using the central limit theorem for proportion, we require the sample size \(n\) satisfying the following condition: the interval \(\left[p-3\sqrt{\frac{p(1-p)}{n}}, p+3\sqrt{\frac{p(1-p)}{n}}\right]\) lies wholly in the interval \([0, 1]\).</p>
@@ -638,7 +638,7 @@ $$\sigma=\sqrt{(1-p)^2p+(0-p)^2(1-p)}=\sqrt{p(1-p)}.$$</p>
 </li>
 </ul>
 <hr />
-<h2 id="example-sampling-voters"><span class="section-number">17.</span> Example: Sampling Voters</h2>
+<h2 id="example-sampling-voters"><span class="section-number">16.</span> Example: Sampling Voters</h2>
 <p>Suppose that in a population of voters in a certain region 53% are in favor of a particular law. Nine hundred randomly selected voters are asked if they favor the law.</p>
 <p>Find the probability that the sample proportion computed from a random sample of size 900 will be at least 2% above true population proportion.</p>
 <p><strong>Solution:</strong> We first verify that the sampling distribution is approximately normal.</p>
@@ -649,7 +649,7 @@ $$\sigma=\sqrt{(1-p)^2p+(0-p)^2(1-p)}=\sqrt{p(1-p)}.$$</p>
 which can be obtained by
 <code>1-NORM.DIST(0.55, 0.53, SQRT(0.53*(1-0.53)/900),TRUE)</code>.</p>
 <hr />
-<h2 id="example-traffic-accidents"><span class="section-number">18.</span> Example: Traffic Accidents</h2>
+<h2 id="example-traffic-accidents"><span class="section-number">17.</span> Example: Traffic Accidents</h2>
 <p>Suppose that in 36% of all car accidents involve injury. Find the probability that the injury rate in a random sample of 250 car accidents is between 30% and 45%.</p>
 <p><strong>Solution:</strong> The injury rate of all car accidents is \(p=10\%=0.3\) and the sample size is \(250\). Because \(np=250\cdot 0.36=90&gt;10\) and \(n(1-p)=250\cdot(1-0.36)=160&gt;10\), the sample size is considered large enough. By the Central Limit Theorem, we can assume that the sample proportion \(\hat{P}\) is approximately normally distributed with the mean \(\mu_{\hat{P}}=p=0.36\) and standard deviation \(\sigma_{\hat{P}}=\sqrt{\frac{p(1-p)}{n}}\approx 0.03\)</p>
 <p>Using the Excel function, <code>NORM.DIST(x, mean, SD, TRUE)</code>, we find the probability of a random sample of 250 car accidents with the injury rate between 30% and 45% is
@@ -720,7 +720,7 @@ $$\textstyle P(0.30&lt;\hat{P}&lt;0.45)=P(\hat{P}&lt;0.45)-P(\hat{P}&lt;0.30) \a
 <p>Lab Instructions in Excel</p>
 </div>
 <hr />
-<h2 id="the-norm-dist-function"><span class="section-number">19.</span> The <code>NORM.DIST()</code> Function</h2>
+<h2 id="the-norm-dist-function"><span class="section-number">18.</span> The <code>NORM.DIST()</code> Function</h2>
 <ul>
 <li>
 <p>Let \(X\) be a normal random variable with mean \(\mu\) and standard deviation \(\sigma\), that is \(X\sim \mathcal{N}(\mu, \sigma^2)\). In Excel, \(P(X&lt;x)\) is given by <code>NORM.DIST(x, mean, sd, TRUE)</code>.</p>
